cluster/esphome/templates/esphome-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome-ingress
  labels:
    app: esphome
    name: esphome
  namespace: node-red
spec:
  rules:
  - host: esphome.thomitzek.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: esphome
            port: 
              number: 6052
